<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GoF:A Helper</string>
    <string name="action_settings">Settings</string>
    <string name="openLink">Check link</string>
    <string name="fireIntent">Launch</string>
    <string name="run_on_phone_startup">Run on phone\'s startup</string>
    <string name="AppTitle">Galaxy on fire: Alliances helper tool</string>
    <string name="observe_clipboard">Observe clipboard for occurrence of \"gofa://\" to open such link in game</string>
    <string name="create_home_screen_widget">Create a widget on home screen. Clicking that widget, when clipboard contains GoF:A link, will open a game if it\'s running</string>
    <string name="editLabel">Enter or paste link to process</string>
    <string name="config">Preferences</string>
    <string name="opening_link">Opening gofa:// link:</string>
    <string name="gofa_not_installed">Galaxy on Fire: Alliance(</string>
    <string name="fire_no_gofa_scheme_in_text">Cannot find \'gofa://\' pattern in text:</string>
    <string name="ask_to_set_permission">In order to properly catch gofa link being copied to buffer, please, set that permission for app to see process usage stats</string>
    <string name="keep_clipboard_history">Keep history of GoF:A links</string>

    <string name="post_notification_text">Post notification into notification bar when GoF:A link is copied into clipboard. Clicking that notification will launch game</string>
    <string name="open_on_single_copy_text">Launch gofa as soon as GoF:A link is copied to clipboard outside of the game</string>
    <string name="open_on_double_copy_text">Launch gofa when GoF:A link is copied to clipboard twice in a row</string>
    <string name="opening_on_double_click">Opening on double copying</string>
    <string name="opening_on_link_copy">Opening on link copy</string>
    <string name="notification_link_in_clipboard">GoF:A link is in clipboard</string>
    <string name="notification_hint_to_open_link">Click to open game with that link</string>
    <string name="clip_list_empty_clipboard_history">No records of GoF:A links available</string>
    <string name="clip_list_loading">Loading…</string>
    <string name="type_to_filter_hint">Start typing to filter</string>
    <string name="opening_hint_from_4gofa">" from 4GoF:A list"</string>
    <string name="confirm_deletion">Are you sure to delete that clip?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="manual_link">Show edit box for manually entering and opening gofa link</string>
    <string name="observing_clipboard_not_possible">Observing clipboard is not possible before Android OS 3.0 (Honeycomb)</string>
    <string name="gofa_not_installed2">) doesn\'t seem to be installed</string>
    <string name="open_link_on_launcher_icon_click">" on launcher icon click with link"</string>
    <string name="button_start_game">Open game</string>
    <string name="start_gofa_or_helper">Open GoF:A or Helper?</string>
    <string name="start_gofa_desc1">Found a gofa:// link in a copy buffer(</string>
    <string name="start_gofa_desc2">). Do you want to open Game or Helper?</string>
    <string name="start_gofa_helper">Open GoF:A Helper</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_copy">Copy</string>
    <string name="history_selection_items_selected">" items selected"</string>
    <string name="confirm_multi_deletion" tools:ignore="PluralsCandidate">Are you sure to delete selected %1$d clips?</string>
    <string name="go_history">History</string>
    <string name="notification_links_in_clipboard">GoF:A links are in clipboard</string>
    <string name="notification_hint_to_open_first_link">Click to open game first link</string>
    <string name="google_analytics">Allowed to send ananymous usage statistic</string>
    <string name="clip_type_icon">Clip type icon</string>
    <string name="click_to_copy_clip">Click to copy clip</string>
    <string name="click_to_delete_clip">Click to delete clip</string>
</resources>
