<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".gofa_helper">
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="50"
        android:title="@string/menu_delete"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="50"
        android:title="@string/menu_share"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_copy_selected"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:orderInCategory="50"
        android:title="@string/menu_copy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:orderInCategory="50"
        android:title="@string/menu_select_all"
        app:showAsAction="ifRoom|collapseActionView"/>


</menu>
