<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="mobi.stolicus.apps.gofa_helper.fragments.LinkInputFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="50dp"
        android:text="@string/editLabel" />

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/openBrowsable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openLink"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editLinkText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textUri" />

        <Button
            android:id="@+id/fire_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fireIntent" />
    </LinearLayout>

    <Button
        android:id="@+id/config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config"
        android:visibility="gone" />


</LinearLayout>
