<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/Widget.AppCompat.ListView"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <ImageView
        android:id="@+id/img1left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:background="@drawable/paperclip1_"
        android:contentDescription="@string/clip_type_icon"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt1title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:singleLine="false"
            tools:text="really long clip item to test how it look"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/txt2desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            tools:text="timestamp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.1">

        <ImageView
            android:id="@+id/img2center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/copy"
            android:visibility="visible"
            android:contentDescription="@string/click_to_copy_clip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.1">

        <ImageView
            android:id="@+id/img3right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rubbish12_"
            android:visibility="visible"
            android:contentDescription="@string/click_to_delete_clip"/>
    </LinearLayout>
</LinearLayout>